Bug 487421 - Added support for --add-exports and --add-reads